# Zoho-Creator-AI-Agent

./: .env.example  .gitignore  README.md  pyproject.toml  render.yaml
apps/zoho_agent_service/: Dockerfile  README.md  __init__.py
apps/zoho_agent_service/api/: main.py  service.py
apps/zoho_agent_service/docs/: api_example.http  production-api.md
apps/zoho_agent_service/ui/: streamlit_app.py
config/: app.yaml
docs/: 01-langchain-basics.md  02-zoho-bulk-ingestion.md  03-query-to-sql-flow.md  04-install-and-run.md  05-api-doc.md
src/agent/: __init__.py  cache_manager.py  cli.py  ingestion.py  models.py  query_engine.py  schema_summary.py  settings.py  sql_safety.py  zoho_client.py
src/zoho_creator_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_e2e.py  test_prompt_exposure.py  test_schema_summary.py  test_sql_safety.py  test_zoho_discovery.py
